# phrasebook

./: Cargo.toml  package-lock.json  package.json
apps/desktop/: .gitignore  index.html  package.json
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/sql/: seed.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs  paths.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/commands/mutations/: add_concept_command.rs  add_entry_command.rs  add_sentence_command.rs  add_term_command.rs  delete_entry_command.rs  edit_concept_command.rs  edit_sentence_command.rs  edit_term_command.rs  mod.rs
apps/desktop/src-tauri/src/commands/queries/: get_all_groups_command.rs  get_all_languages_command.rs  get_entry_by_id_command.rs  get_entry_stats_command.rs  get_explore_entries_command.rs  mod.rs  search_explore_entries_command.rs
core/: Cargo.toml
core/migrations/: 20250604152118_add_entry_types.sql
core/src/: db.rs  lib.rs  paths.rs
core/src/commands/mutations/: add_concept.rs  add_entry.rs  add_sentence.rs  add_term.rs  delete_entry.rs  edit_concept.rs  edit_sentence.rs  edit_term.rs  mod.rs
core/src/commands/queries/: get_all_groups.rs  get_all_languages.rs  get_entry_by_id.rs  get_entry_stats.rs  get_explore_entries.rs  mod.rs  search_explore_entries.rs
core/src/commands/queries/helper/: get_term_by_id.rs
core/src/models/: mod.rs
core/src/models/dto/: explore_response.rs
core/src/models/entry/: concept_title.rs  mod.rs  sentence_translation.rs  term_translation.rs
src/: App.vue  main.js  router.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
(+103 files in other folders)
