[package]
name = "phrasebook_desktop"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "phrasebook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
tauri-plugin-fs = "2"
sqlx = { version = "0.8.3", features = [ "sqlite", "runtime-tokio-native-tls" ] }
tokio = { version = "1.44", features = ["full"] }
regex = "1.11.1"

# Local dependency on the shared Rust core crate
phrasebook_core = { path = "../../../core", features = ["tauri-integration"] }
